--- a/src/blocks/footer/footer.css
+++ b/src/blocks/footer/footer.css
@@ -2,6 +2,7 @@
   width: 100%;
   max-width: 880px;
   margin: 66px 0 60px;
+  /*padding-bottom: 60px;*/
 }
 
 @media screen and (max-width: 375px) {
