--- a/src/blocks/page/page.css
+++ b/src/blocks/page/page.css
@@ -2,6 +2,7 @@
   max-width: 880px;
   margin: 0 auto;
   padding: 0 0 0;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   -webkit-font-smoothing: antialiased;
